rust/macros/tests/invalid/target/debug/deps/double_commas_rs-5a428d3118207102.d
/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/libdouble_commas_rs-5a428d3118207102.rmeta: double-commas.rs Cargo.toml

/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/double_commas_rs-5a428d3118207102.d: double-commas.rs Cargo.toml

double-commas.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
